# rl-experiments

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
rl_experiments/: __init__.py  __main__.py  formats.py  train.py
rl_experiments/defs/: algorithm.yaml  environment.yaml  experiment.yaml  metrics.yaml  run-options.yaml  run-outcome.yaml  stats.yaml
scripts/: script.py
