[project]
name = "rl-experiments"
version = "0.1.3"
description = "A protocol for RL experiments"
authors = [
    {name = "Roberto Cipollone",email = "cipollone.rt@gmail.com"}
]
license = {text = "LGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]

[dependency-groups]
dev = [
    "ipython",
    "black"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
